<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SkyJump</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
 <string name="title_activity_main">MainActivity</string>
 <string name="menu_settings">Settings</string>
    <string name="gameName">gameName</string>
    <string name="start">Start</string>
    <string name="set">Set</string>
    <string name="about">About</string>

    
    <string name="description">description</string>

    <string name="lesson_three_wallpaper_1">Using GLSurfaceView</string>
<string name="lesson_three_wallpaper_2">Using re-implementation of GLSurfaceView</string>
<string name="lesson_three_wallpaper_3">Switching implementations</string>

<string name="mode_timer">TIMER MODE</string>
<string name="mode_scores">SCORES MODE</string>

<string name="selectlevel">Select Level</string>
<string name="endlessMode">Endless Mode</string>
<string name="demo">demo</string>
<string name="restart">Restart</string>
<string name="back">Back</string>
<string name="share">Share</string>

<string name="next">Next</string>

<string name="gameover">Game Over</string>



</resources>
