<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#80000000" >

    <TextView
        android:id="@+id/textView_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_share1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="41dp"
        android:text="@string/gameover"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/button_share1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="80dp"
        android:padding="20dp"
        android:text="@string/share"
        android:textSize="24sp" />

    <Button
        android:id="@+id/button_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button_share1"
        android:layout_alignBottom="@+id/button_share1"
        android:layout_marginRight="30dp"
        android:layout_toLeftOf="@+id/button_share1"
        android:padding="20dp"
        android:text="@string/next"
        android:textSize="24sp" />

    <Button
        android:id="@+id/button_back1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button_share1"
        android:layout_alignBottom="@+id/button_share1"
        android:layout_marginLeft="30dp"
        android:layout_toRightOf="@+id/button_share1"
        android:padding="20dp"
        android:text="@string/back"
        android:textSize="24sp" />

</RelativeLayout>